@@ -1,6 +1,7 @@
 Changes for 2.1.0
 
 New features:
+..F....... [ZBX-875] fixed duplicate Y-scale (Oleg)
 .......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
 .......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
 ..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
